welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: type mismatch;
 found   : java.awt.Color
 required: Int
		setCouleurBrosse(T(i))
                                   ^Array1:27: error: type mismatch;
 found   : java.awt.Color
 required: Int
			setCouleurBrosse(T(i))
                                           ^