welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	val X = getMondeHauteur()
	var T = new Array[Color](X);
	for( i<-0 to T.length-1){
		avance();
		T(i)=getCouleurSol()
	}
	gauche()
	avance()
	droite()
	avance()
	for(i<-T){
		avance()
		setCouleurBrosse(T(i))
		baisseBrosse()		
		
	}
	var b=getMondeLargeur()
	for(i<-1 to b-1){
		gauche();
		avance();
		droite();
		avance();
		for(i<-T){
			avance()
			setCouleurBrosse(T(i))
			baisseBrosse()	
				
		}
	}		
}	
